# healthcare-ai-dashboard

./: LICENSE  README.md  beautiful_charts.py  beautiful_charts_substack.py  contributor_detailed_stats.csv  contributor_detailed_stats_aggregated.csv  healthcare_data.csv  main.py  pyproject.toml  repos_classified.csv  repos_classified_organizations.csv  repos_classified_personal.csv
