[project]
name = "healthcare-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gspread>=6.2.1",
    "hiplot>=0.1.33",
    "marimo>=0.16.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "protobuf>=6.32.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
